# rust-websocket-lite

./: .dockerignore  .gitignore  .travis.yml  Cargo.toml  Dockerfile  LICENSE  README.md  clippy.toml  docker-compose.yml  hello_world_server.py  requirements.txt  rust-nightly-toolchain  rust-toolchain  rustfmt.toml  test.html  test.sh
.github/: dependabot.yml
.github/workflows/: ci.yml
assert-allocations/: Cargo.toml
assert-allocations/src/: lib.rs
config/: fuzzingclient.json
examples/: async-autobahn-client.rs  autobahn-client.rs  wsdump.rs
fuzz/: .gitignore  Cargo.toml  dict.txt
fuzz/fuzz_targets/: fuzz_codec.rs
hyper-websocket-lite/: Cargo.toml
hyper-websocket-lite/examples/: autobahn-server.rs  hello-world-server.rs
hyper-websocket-lite/src/: lib.rs
reports/clients/: index.json
reports/servers/: index.json
src/: client.rs  frame.rs  lib.rs  mask.rs  message.rs  opcode.rs  ssl.rs  sync.rs  upgrade.rs
websocket-codec/: Cargo.toml
websocket-codec/benches/: bench.rs
websocket-codec/examples/: wsinspect.rs
websocket-codec/src/: close.rs  frame.rs  lib.rs  mask.rs  message.rs  opcode.rs  protocol.rs  upgrade.rs
websocket-lite/: Cargo.toml
websocket-lite/examples/: async-autobahn-client.rs  autobahn-client.rs  discord.rs  hello-world-client.rs  wsdump.rs
websocket-lite/src/: client.rs  lib.rs  ssl.rs  sync.rs
