[package]
name = "websocket-lite"
description = "A fast, low-overhead WebSocket client"
version = "0.2.4"
authors = ["Tim Robinson <tim.g.robinson@gmail.com>"]
repository = "https://github.com/1tgr/rust-websocket-lite"
license = "MIT"
edition = "2018"

[dependencies]
base64 = "0.9"
bytes = "0.4"
futures = "0.1"
httparse = "1"
native-tls = { version = "0.1", optional = true }
openssl = { version = "0.10", optional = true }
rand = "0.5"
sha1 = "0.6"
tokio-codec = "0.1"
tokio-io = "0.1"
tokio-openssl = { version = "0.2", optional = true }
tokio-tcp = "0.1"
tokio-tls = { version = "0.1", optional = true }
url = "1"
websocket-codec = { version = "0.1" }

[dev-dependencies]
structopt = "0.2"
tokio-core = "0.1"
tokio-timer = "0.2"

[features]
default = ["ssl-native-tls"]
nightly = []
ssl-native-tls = ["native-tls", "tokio-tls"]
ssl-openssl = ["openssl", "tokio-openssl"]

## Uncomment to enable the SSLKEYLOGFILE environment variable when the ssl-openssl feature is used
# [patch.crates-io]
# openssl = { git = "https://github.com/sfackler/rust-openssl" }
