[package]
name = "websocket-lite"
description = "A fast, low-overhead WebSocket client"
version = "0.3.0-alpha.6"
authors = ["Tim Robinson <tim.g.robinson@gmail.com>"]
repository = "https://github.com/1tgr/rust-websocket-lite"
license = "MIT"
edition = "2018"

[dependencies]
base64 = "0.9"
bytes = "0.4"
futures-preview = "0.3.0-alpha.19"
native-tls = { version = "0.2", optional = true }
openssl = { version = "0.10", optional = true }
rand = "0.5"
tokio-codec = "0.2.0-alpha.6"
tokio-io = { version = "0.2.0-alpha.6", features = ["util"] }
tokio-openssl = { version = "0.4.0-alpha.6", optional = true }
tokio-net = { version = "0.2.0-alpha.6", features = ["tcp"] }
tokio-tls = { version = "0.3.0-alpha.6", optional = true }
url = "1"
websocket-codec = "0.2.0-alpha.6"

[dev-dependencies]
structopt = "0.2"
tokio = "0.2.0-alpha.6"

[features]
default = ["ssl-native-tls"]
nightly = []
ssl-native-tls = ["native-tls", "tokio-tls"]
ssl-openssl = ["openssl", "tokio-openssl"]

## Uncomment to enable the SSLKEYLOGFILE environment variable when the ssl-openssl feature is used
# [patch.crates-io]
# openssl = { git = "https://github.com/sfackler/rust-openssl" }
