[package]
name = "hyper-websocket-lite"
description = "WebSocket server implementation on hyper and websocket-lite"
version = "0.3.5"
authors = ["Tim Robinson <tim.g.robinson@gmail.com>"]
repository = "https://github.com/1tgr/rust-websocket-lite"
license = "MIT"
edition = "2018"

[dependencies]
futures = "0.3"
hyper = "0.13"
websocket-codec = { version = "0.3.5", path = "../websocket-codec" }
tokio = { version = "0.2", features=["macros"] }
tokio-util = { version = "0.3", features=["codec"] }
