[package]
name = "hyper-websocket-lite"
description = "WebSocket server implementation on hyper and websocket-lite"
version = "0.5.0"
authors = ["Tim Robinson <tim.g.robinson@gmail.com>"]
repository = "https://github.com/1tgr/rust-websocket-lite"
license = "MIT"
edition = "2018"

[dependencies]
futures = "0.3"
hyper = { version = "0.14", features=["http1", "server"] }
websocket-codec = { version = "0.5", path = "../websocket-codec" }
tokio = { version = "1", features=["macros"] }
tokio-util = { version = "0.7", features=["codec"] }

[dev-dependencies]
hyper = { version = "0.14", features=["tcp"] }