[package]
name = "hyper-websocket-lite"
description = "WebSocket server implementation on hyper and websocket-lite"
version = "0.5.0"
authors = ["Tim Robinson <tim.g.robinson@gmail.com>"]
repository = "https://github.com/1tgr/rust-websocket-lite"
license = "MIT"
edition = "2018"

[dependencies]
hyper = { version = "0.14", default-features = false, features = ["server"] }
tokio = { version = "1", default-features = false, features = ["rt"] }
tokio-util = { version = "0.7", default-features = false, features=["codec"] }
websocket-codec = { version = "0.5", path = "../websocket-codec" }

[dev-dependencies]
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
hyper = { version = "0.14", features=["http1", "server", "tcp"] }
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }
