[package]
name = "websocket-codec"
description = "A Tokio codec for the websocket protocol"
version = "0.5.0"
authors = ["Tim Robinson <tim.g.robinson@gmail.com>"]
repository = "https://github.com/1tgr/rust-websocket-lite"
license = "MIT"
edition = "2018"

[dependencies]
base64 = "0.13"
byteorder = "1"
bytes = "1"
httparse = "1"
rand = "0.8"
sha1 = "0.6"
tokio-util = { version="0.7", features=["codec"] }

[dev-dependencies]
assert-allocations = { path="../assert-allocations" }
criterion = "0.3"
quickcheck = "1"
quickcheck_macros = "1"
static_assertions = "1"
structopt = "0.3"

[[bench]]
name = "bench"
harness = false
