[package]
name = "websocket-lite"
description = "A fast, low-overhead WebSocket client"
version = "0.5.0"
authors = ["Tim Robinson <tim.g.robinson@gmail.com>"]
repository = "https://github.com/1tgr/rust-websocket-lite"
license = "MIT"
edition = "2018"

[dependencies]
base64 = "0.13"
bytes = "1"
futures = "0.3"
native-tls = { version = "0.2", optional = true }
openssl = { version = "0.10", optional = true }
rand = "0.8"
tokio-util = { version = "0.7", features = ["codec"] }
tokio-openssl = { version = "0.6", optional = true }
tokio-native-tls = { version = "0.3", optional = true }
tokio = { version = "1", features = ["net", "io-util"] }
url = "2"
websocket-codec = { version = "0.5", path = "../websocket-codec" }

[dev-dependencies]
structopt = "0.3"
tokio = { version = "1", features = ["macros", "time", "io-std", "rt-multi-thread"] }

[features]
default = ["ssl-native-tls"]
nightly = []
ssl-native-tls = ["native-tls", "tokio-native-tls"]
ssl-openssl = ["openssl", "tokio-openssl"]

## Uncomment to enable the SSLKEYLOGFILE environment variable when the ssl-openssl feature is used
# [patch.crates-io]
# openssl = { git = "https://github.com/sfackler/rust-openssl" }
