[package]
name = "websocket-lite"
description = "A fast, low-overhead WebSocket client"
version = "0.5.2"
authors = ["Tim Robinson <tim.g.robinson@gmail.com>"]
repository = "https://github.com/1tgr/rust-websocket-lite"
license = "MIT"
edition = "2018"
readme = "../README.md"

[dependencies]
base64 = "0.13"
bytes = "1"
futures-util = { version = "0.3", default-features = false }
native-tls = { version = "0.2", optional = true }
openssl = { version = "0.10", optional = true }
rand = "0.8"
tokio = { version = "1", default-features = false, features = ["net", "io-util"] }
tokio-native-tls = { version = "0.3", optional = true }
tokio-openssl = { version = "0.6", optional = true }
tokio-util = { version = "0.7", default-features = false, features = ["codec"] }
url = "2"
websocket-codec = { version = "0.5", path = "../websocket-codec" }

[dev-dependencies]
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
structopt = "0.3"
tokio = { version = "1", features = ["macros", "time", "io-std", "rt-multi-thread"] }

[features]
default = ["ssl-native-tls"]
nightly = []
ssl-native-tls = ["native-tls", "tokio-native-tls"]
ssl-openssl = ["openssl", "tokio-openssl"]

## Uncomment to enable the SSLKEYLOGFILE environment variable when the ssl-openssl feature is used
# [patch.crates-io]
# openssl = { git = "https://github.com/sfackler/rust-openssl" }
