[package]
name = "websocket-lite"
description = "A fast, low-overhead WebSocket client"
version = "0.5.2"
authors = ["Tim Robinson <tim.g.robinson@gmail.com>"]
repository = "https://github.com/1tgr/rust-websocket-lite"
license = "MIT"
edition = "2018"
readme = "../README.md"

[dependencies]
base64 = "0.20"
bytes = "1"
futures-util = { version = "0.3", default-features = false }
native-tls = { version = "0.2", optional = true }
rand = "0.8"
rustls = { version = "0.19", optional = true }
rustls-native-certs = { version = "0.5", optional = true }
tokio = { version = "1", default-features = false, features = ["net", "io-util"] }
tokio-native-tls = { version = "0.3", optional = true }
tokio-rustls = { version = "0.22", optional = true }
tokio-util = { version = "0.7", default-features = false, features = ["codec"] }
url = "2"
webpki = { version = "0.21", optional = true }
webpki-roots = { version = "0.21", optional = true }
websocket-codec = { version = "0.5", path = "../websocket-codec" }

[dev-dependencies]
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
structopt = "0.3"
tokio = { version = "1", features = ["macros", "time", "io-std", "rt-multi-thread"] }

[features]
default = ["ssl-native-tls"]
nightly = []
__ssl = []
ssl-native-tls = ["__ssl", "native-tls", "tokio-native-tls"]
__ssl-rustls = ["__ssl", "rustls", "tokio-rustls", "webpki"]
ssl-rustls-webpki-roots = ["__ssl-rustls", "webpki-roots"]
ssl-rustls-native-roots = ["__ssl-rustls", "rustls-native-certs"]
